--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <a class="nav-link active" aria-current="page" href="index.php">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutus.php">About us</a>
+          <a class="nav-link" href="aboutus.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.php">Log in</a>
+          <a class="nav-link" href="login.html">Log in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signup.php">Sign up</a>
+          <a class="nav-link" href="signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
