--- a/login.html
+++ b/login.html
@@ -30,16 +30,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.php">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutus.php">About us</a>
+          <a class="nav-link" href="aboutus.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.php">Log in</a>
+          <a class="nav-link" href="login.html">Log in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signup.php">Sign up</a>
+          <a class="nav-link" href="signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -56,7 +56,7 @@
 <!--------------------------------------------------------LOG-IN--------------------------------------------------------------------->
  
     <div>
-        <form action="index.php" type="">
+        <form action="index.html" type="">
             <div class="pt-5"; >
                 <label for="exampleFormControlInput1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
