--- a/signup.html
+++ b/signup.html
@@ -30,16 +30,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.php">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutus.php">About us</a>
+          <a class="nav-link" href="aboutus.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="login.php">Log in</a>
+          <a class="nav-link" href="login.html">Log in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signup.php">Sign up</a>
+          <a class="nav-link" href="signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -59,7 +59,7 @@
     <h1 class="text-center">SIGN-UP</h1>
 </div> 
 <div class="w-50 m-auto pt-5">
-    <form action="userinfo.php" method="post">
+    <form action="userinfo.html" method="post">
         <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" placeholder="Enter user name" id="username" class="form-control">
