--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
     <h1 class="text-center">SIGN-UP</h1>
 </div> 
 <div class="w-50 m-auto pt-5">
-    <form action="userinfo.html" method="post">
+    <form action="userinfo.php" method="post">
         <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" placeholder="Enter user name" id="username" class="form-control">
