--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
 <!----------------------------------------------------------Progress bar-------------------------------------------------------->
-<div class="w-50 ml-3"> 
+<div class="col-lg-6 col-md-6 cl-12 ml-3"> 
 <div>
     <h3 class="py-3 ">HTML</h3>
 </div>
