--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
 
 <!----------------------------------------------------------Progress bar-------------------------------------------------------->
-<div class="container-fluid col-lg-6 col-md-6 cl-12 "> 
+<div class="container-fluid col-lg-6 col-md-6 cl-12 ml-3"> 
 <div>
-    <h3 class="py-3 ">HTML</h3>
+    <h3 class="py-3 ">HTML <span class="badge badge-secondary" id="html">New</span></h3>
 </div>
 
 <div class="progress">
@@ -128,7 +128,58 @@
 </div> 
 </div>
 </section>
-<!----------------------------------------------------------------------------------------------------------------------------->
+<!----------------------------------------------------------CARDS------------------------------------------------------------------->
+
+
+<h1 class="text-center my-5">CARDS</h1>
+
+
+<div class="container-fluid m-auto">  
+  <div class="row">
+    <div class="m-auto col-lg-4 col-md-4 col-12 ">
+        <div class="card">
+          <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="m-auto col-lg-4 col-md-4 col-12">
+        
+      <div class="card" >
+          <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
+          <div class="card-body">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+            <a href="#" class="btn btn-primary">See Profile</a>
+          </div>
+      </div>
+    </div>
+
+    <div class="m-auto col-lg-4 col-md-4 col-12">
+        
+      <div class="card" >
+          <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
+          <div class="card-body">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+            <a href="#" class="btn btn-primary">See Profile</a>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+ 
+
+
+
+
+<!----------------------------------------------------------------------------------------------------------------------------------->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
