--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@
   </div>
 </div>
 
+<!-----------------------------------------------------------------FOOTER------------------------------------------------------------------------->
 
+<footer class="footer mt-5">
+  <p class="p-3 bg-dark text-white text-center">DEMO</p>
+</footer>
  
 
 
