--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <div class="container-fluid m-auto">  
   <div class="row">
     <div class="m-auto col-lg-4 col-md-4 col-12 ">
-        <div class="card">
+        <div class="card my-3 ">
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">John Doe</h4>
@@ -149,7 +149,7 @@
 
     <div class="m-auto col-lg-4 col-md-4 col-12">
         
-      <div class="card" >
+      <div class="card my-3" >
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">John Doe</h4>
@@ -161,7 +161,7 @@
 
     <div class="m-auto col-lg-4 col-md-4 col-12">
         
-      <div class="card" >
+      <div class="card my-3" >
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">John Doe</h4>
