--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+
 <!---------------------------------------NAVBAR----------------------------------------------------------------------------------->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -106,7 +107,7 @@
 <!----------------------------------------------------------Progress bar-------------------------------------------------------->
 <div class="container-fluid col-lg-6 col-md-6 cl-12 ml-3"> 
 <div>
-    <h3 class="py-3 ">HTML <span class="badge badge-secondary" id="html">New</span></h3>
+    <h3 class="py-3 ">HTML</h3>
 </div>
 
 <div class="progress">
@@ -134,9 +135,9 @@
 <h1 class="text-center my-5">CARDS</h1>
 
 
-<div class="container-fluid m-auto">  
+<div class="container-fluid ">  
   <div class="row">
-    <div class="m-auto col-lg-4 col-md-4 col-12 ">
+    <div class=" col-lg-4 col-md-4 col-12 ">
         <div class="card my-3 ">
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
             <div class="card-body">
@@ -147,7 +148,7 @@
         </div>
     </div>
 
-    <div class="m-auto col-lg-4 col-md-4 col-12">
+    <div class="col-lg-4 col-md-4 col-12">
         
       <div class="card my-3" >
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
@@ -159,7 +160,7 @@
       </div>
     </div>
 
-    <div class="m-auto col-lg-4 col-md-4 col-12">
+    <div class="col-lg-4 col-md-4 col-12">
         
       <div class="card my-3" >
           <img class="card-img-top" src="images\Carousel3.PNG" alt="Card image" style="width:100%">
@@ -177,8 +178,7 @@
 
 <footer class="footer mt-5">
   <p class="p-3 bg-dark text-white text-center">DEMO</p>
-</footer>
- 
+</footer> 
 
 
 
