--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 <!----------------------------------------------------------Progress bar-------------------------------------------------------->
-<div class="container-fluid col-lg-6 col-md-6 cl-12 ml-3"> 
+<div class="m-auto col-lg-6 col-md-6 cl-12 ml-3"> 
 <div>
     <h3 class="py-3 ">HTML</h3>
 </div>
