--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
         </div>
 
 
-        <div class=" col-lg-4 col-md-4 cl-12 py- "> 
+        <div class=" col-lg-4 col-md-4 cl-12 py-3 "> 
           <img src="images\Carousel3.PNG" alt="image" class="img-fluid">
         </div>
         
-        <div class=" col-lg-4 col-md-4 cl-12 py- "> 
+        <div class=" col-lg-4 col-md-4 cl-12 py-3 "> 
           <h4>Welcome !</h4>
           <p class="pt-4">Nature is the gift of mother earth to all humankind and other living organisms. It constitutes Greenery, Soil, Air, Water and all physical factors that are the pillars of lives living here. Nature is also called a human attribute in behavioral terminology. The natural environment which is in physical form is called nature.</p>
         </div>
