--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <title>Demo</title>
     </head>
   <body>
 
@@ -33,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.php">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="aboutus.html">About us</a>
@@ -212,6 +213,12 @@
     </section>
 
 
+    <!-----------------------------------------------------------------CONTACT------------------------------------------------------------------------->
+    <section>
+      <div>
+        <h1 class="text-center py=5 ">CONTACT US</h1>
+      </div>
+    </section>
     <!-----------------------------------------------------------------FOOTER------------------------------------------------------------------------->
 
     <section>
