--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <!---------------------------------------NAVBAR----------------------------------------------------------------------------------->
     <section>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container-fluid m-auto">
           <a class="navbar-brand" href="#">DEMO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -117,18 +117,18 @@
       </div>
     </section>
     <!---------------------------------------------------------Welcome-------------------------------------------------------------------->
-    <section>
+    <section class="my-5 wow animate__animated animate__fadeInUp">
       <div>
-        <h1 class="text-center wow animate__animated animate__fadeInUp">Welcome</h1>
-        <p class="text-center my-5 wow animate__animated animate__fadeInUp">This is my demo website</p>
+        <h1 class="text-center">Welcome</h1>
+        <p class="text-center my-5">This is my demo website</p>
       </div>
     </section>
 
 
     <!----------------------------------------------------------Progress bar-------------------------------------------------------->
-    <section">
-      <div class="row ">
-        <div class=" col-lg-4 col-md-4 cl-12 wow animate__animated animate__fadeInUp"> 
+    <section>
+      <div class="row  m-auto">
+        <div class=" col-lg-4 col-md-4 cl-12 wow animate__animated animate__fadeInUp "> 
           <div>
               <h3 class="pt-3 ">HTML</h3>
           </div>
@@ -214,21 +214,21 @@
 
     <!-----------------------------------------------------------------CONTACT------------------------------------------------------------------------->
     <section>
-      <div>
+      <div >
         <h1 class="text-center py=5 ">CONTACT US</h1>
       </div>
     </section>
     <!-----------------------------------------------------------------FOOTER------------------------------------------------------------------------->
 
     <section>
-      <footer class="footer mt-5">
+      <footer class="footer mt-5 ">
         <p class="p-3 bg-dark text-white text-center">DEMO</p>
       </footer> 
     </section>
 
 
 
-    <!----------------------------------------------------------------------------------------------------------------------------------->
+    <!----------------------------------------------SCRIPTS------------------------------------------------------------------------------>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
