--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <style>
+    div {
+      background-image: url('img_girl.jpg');
+    }
+    </style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -8,7 +14,7 @@
     <title>Document</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS\style.css">
+    <link rel="stylesheet" href="CSS\signup.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -22,12 +28,14 @@
 </head>
 <body>
 
+  <img class="bg" src="../himanshu42.github.io/images/Carousel1.jpg" alt="background image loading failed">
+
 <!---------------------------------------NAVBAR----------------------------------------------------------------------------------->
 
 <section>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">DEMO</a>
+      <a class="navbar-brand" href="index.html">DEMO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -71,33 +79,47 @@
 </section>
     
 <!--------------------------------------------------------SIGN-UP--------------------------------------------------------------------->
- 
-<div class="my-3">
-    <h1 class="text-center">SIGN-UP</h1>
-</div> 
-<div class="w-50 m-auto pt-5">
-    <form action="userinfo.php" method="post">
-        <div class="form-group">
+ <br>
+<div class="jb ">
+  <div class="container">
+    <div class="jumbotron">
+      <div class="pb-3">
+        <h1 class="text-center">SIGN-UP</h1>
+      </div> 
+      <div class="w-50 m-auto pt-3">
+        <form action="userinfo.php" method="post">
+          <div class="form-group">
+            <div class="row">
+              <div class="col-lg=6 col-md-6">
                 <label for="username">Username</label>
                 <input type="text" placeholder="Enter user name" id="username" class="form-control">
                 <label for="fullname">Full name:</label>
                 <input type="text" class="form-control" placeholder="Enter full name " id="fullname">
+              </div>
+              <div class="col-lg=6 col-md-6">
                 <label for="phone">Phone number:</label>
                 <input type="number" class="form-control" placeholder="Enter phone number" id="phonenumber">
                 <label for="email">Email address:</label>
                 <input type="email" class="form-control" placeholder="Enter email" id="email">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" placeholder="Enter password" id="password">
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                <input class="form-check-input" type="checkbox"> Remember me
-                </label>
+              </div>
             </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+            <div>
+              <label for="password">Password:</label>
+              <input type="password" class="form-control" placeholder="Enter password" id="password">
+            </div>  
+            <br>
+            <div class="form-group form-check m-auto">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> Remember me
+              </label>
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+      </div>
+    </div>
+  </div>
 </div>
-
 
 
 
